<resources>
    <string name="app_name">MyLocalization</string>
    <string name="app_title">Registration</string>

    <string name="from_text">Fill in this from to register as user</string>
    <string name="from_name">Full name</string>
    <string name="from_email">Email Address</string>
    <string name="from_phone">Phone Number</string>
    <string name="from_pwd">Password</string>
    <string name="from_check">I have read and agree the terms</string>

    <string name="btn_go">Submit</string>
    <string name="btn_lang">Set Language</string>

</resources>
